Fixed box overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html,body{height:100%;min-width:950px;}
 body,p{margin:0;padding:0;font:12px/20px "Lucida Grande",Tahoma,Verdana,sans-serif;}
 #header{padding:5px;position:fixed;width:100%;z-index:101;}
 #right-content{float:right;padding-top:5px;width:65%;}
-#left-content{height:100%;margin-right:35%;padding:5px;position:fixed;width:35%;}
+#left-content{height:100%;margin-right:35%;padding:5px;position:fixed;width:35%;min-width:320px;}
 ul{list-style-type:none;padding-left:1em;margin:0;}
 ul.div,.left-content,.right-content{margin:0;}
 #block{display:block;height:35em;}
@@ -13,6 +13,6 @@ form{margin:5px;}form input{margin:5px;}
 .sample{padding:20px;}.sample h4{margin-bottom:5px;}
 .sample .drop_zone{border:2px dashed #BBBBBB;border-radius:5px 5px 5px 5px;color:#BBBBBB;padding:25px;text-align:center;}
 #suggestion-block{background:#bbbbbb;height:20%;margin:40px;width:80%;}#suggestion-block p{padding:6px;}
-.chart{background:#FFF;margin:5px;margin-bottom:30px;}
-.chart rect{stroke:white;fill:steelblue;}
+.chart{background:#FFF;margin:5px;}
+.chart rect{stroke:steelblue;fill:steelblue;}
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{background:none repeat scroll 0 0 transparent;border:0 none;margin:0;padding:0;vertical-align:baseline;}
